[package]
name = "polkadot-core-primitives"
version = "7.0.0"
description = "Core Polkadot types used by Relay Chains and parachains."
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"fp-account/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
]
